--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <!--css-->
   <link href="css/my.css" rel="stylesheet"/>
   <style type="text/css">
+     .none{display: none;}
      @keyframes rotate{
      0% {transform: perspective(120px) rotateX(0deg) rotateY(0deg);}
      50% {transform: perspective(120px) rotateX(-180deg) rotateY(0deg);}
