--- a/index.html
+++ b/index.html
@@ -287,22 +287,24 @@
     <div class="set" id="set1">
       <h2 class="settingTittle">外观</h2>
       <div id="themeColorLi">
-        <img src="images/color-ic.png" class="settingIc ic" />  
+        <img src="images/color-ic.png" class="ic"/>  
         <div>
           <p class="">主色调</p>
           <br/>  
           <div class="p2">主题主色调，默认为#1565c0</div>
           <div value="#1565C0" id="themeColor" class="colorSelect"></div>
+		  <div class="floatLayer"><input class="TCInput"/></div>
         </div>
       </div>
-      <div class="">
-        <img src="images/color-ic.png" class="settingIc ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
+      <div id="secondColorLi">
+        <img src="images/color-ic.png" class="ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
         <div>
           <p class="">强调色</p>
           <br/>  
           <div class="p2">主题强调色，默认为#f08b3b</div>
           <div value="#f08b3b" id="secondColor" class="colorSelect"></div>
-        </div>
+          <div class="gggfloatLayer"><input class="SCInput"/></div>
+		</div>
       </div>
       <div class="">
         <div></div>
@@ -311,6 +313,7 @@
         <div></div>
       </div>
     </div>
+	
     <div class="set" id="set2">
       <h2 class="settingTittle">高级</h2>
       <div id="themeColorLi">
