--- a/index.html
+++ b/index.html
@@ -289,21 +289,21 @@
       <div id="themeColorLi">
         <img src="images/color-ic.png" class="ic"/>  
         <div>
-          <p class="">主色调</p>
+          <p class="p1">主色调</p>
           <br/>  
           <div class="p2">主题主色调，默认为#1565c0</div>
-          <div value="#1565C0" id="themeColor" class="colorSelect"></div>
-		  <div class="floatLayer"><input class="TCInput"/></div>
+          <div value="#1565C0" id="themeColor" class="colorSelect"><input id="themeColorInput"/></div>
         </div>
       </div>
+
       <div id="secondColorLi">
         <img src="images/color-ic.png" class="ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
         <div>
-          <p class="">强调色</p>
+          <p class="p1">强调色</p>
           <br/>  
           <div class="p2">主题强调色，默认为#f08b3b</div>
-          <div value="#f08b3b" id="secondColor" class="colorSelect"></div>
-          <div class="gggfloatLayer"><input class="SCInput"/></div>
+          <div value="#f08b3b" id="secondColor" class="colorSelect"><input id="secondColorInput"/></div>
+          <!-- <div class="floatLayer"><input class="floatInput"/></div> -->
 		</div>
       </div>
       <div class="">
