--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <div class="top">
     <img src="images/back-ic.png" id="back" alt="返回"/>
     <h1>特斯拉线圈设计器</h1>
-	<div id="h1Set" class="h1">设置</div>
-	<div id="h1About" class="h1">关于</div>
-	<div id="h1Help" class="h1">帮助</div>
+	  <div id="h1Set" class="h1">设置</div>
+	  <div id="h1About" class="h1">关于</div>
+	  <div id="h1Help" class="h1">帮助</div>
     <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>    
 	<ul id="moreList">
       <li>
@@ -292,16 +292,16 @@
       <h2 class="settingTittle">外观</h2>
 
       <div id="nightModeLi">
-        <img src="images/color-ic.png" class="ic"/>  
+        <img src="images/brightness-ic.png" class="ic"/>
         <div>
           <p class="p1 nop2">夜间模式</p>
           <div id="nightMode" class=""></div>
-		  <div class="onoffswitch">
-			<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
-			<label class="onoffswitch-label" for="myonoffswitch"></label>
-		  </div>
-		</div>
-      </div>
+          <div class="onoffswitch">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">        
+            <label class="onoffswitch-label" for="myonoffswitch"></label>
+          </div>
+        </div>
+        </div>
 	  
       <div id="themeColorLi">
         <img src="images/color-ic.png" class="ic"/>  
@@ -319,22 +319,22 @@
           <p class="p1">强调色</p>
           <br/>  
           <div class="p2">主题强调色，默认为#f08b3b</div>
-          <div id="secondColor" class="colorSelect"><input id="secondColorInput" value="#f08b3b"/></div>-->
+          <div id="secondColor" class="colorSelect"><input id="secondColorInput" value="#f08b3b"/></div>
 		</div>
       </div>
 	
 	  <div id="">
-        <img src="images/color-ic.png" class="settingIc ic"/>  
+        <img src="images/opacity-ic.png" class="settingIc ic"/>  
         <div>
           <p class="">图片透明度</p>
           <br/>  
           <div class="p2">仅用于把玩∠( ᐛ 」∠)＿</div>
-		  <!--<div id="opacity" class="colorSelect"><input id="opacityInput" value="#fff"/></div>-->
+		        <div id="opacitySet" class="colorSelect"><input id="opacityInput" value="1" type="number"/></div>
         </div>
       </div>
 	  
 	  <div id="">
-        <img src="images/color-ic.png" class="settingIc ic"/>  
+        <img src="images/settings-ic.png" class="settingIc ic"/> 
         <div>
           <p class="nop2">###</p>
           <br/>  
@@ -346,27 +346,17 @@
 	
     <div class="set" id="set2">
       <h2 class="settingTittle">高级</h2>
-	  
       <div id="clearDate">
-        <img src="images/color-ic.png" class="settingIc ic" />  
+        <img src="images/restore-ic.png" class="settingIc ic"/>
         <div>
           <p class="">还原</p>
           <br/>  
           <div class="p2">清除所有用户数据(localStorage)</div>
         </div>
       </div>
-	  
-      <div id="">
-        <img src="images/color-ic.png" class="settingIc ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
-        <div>
-          <p class="nop2">###</p>
-          <br/>  
-          <div class="p2"></div>
-        </div>
-      </div>
 
       <div id="">
-        <img src="images/color-ic.png" class="settingIc ic"/>  
+        <img src="images/settings-ic.png" class="settingIc ic"/> 
         <div>
           <p class="nop2">###</p>
           <br/>  
@@ -375,7 +365,7 @@
       </div>
 	  
 	  <div id="">
-        <img src="images/color-ic.png" class="settingIc ic"/>  
+        <img src="images/settings-ic.png" class="settingIc ic"/>  
         <div>
           <p class="nop2">###</p>
           <br/>  
