--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <!-- Icon -->
   <link rel="icon" type="image/x-icon" href="images/Icon.png"/>
   <!-- tittle -->
-  <title>特斯拉线圈设计器</title> 
+  <title>特斯拉线圈设计器</title>
 </head>
 
 <body>
   <!-- initial animation -->
   <div id="bg" style="position: fixed; height: 100%; width: 100%; z-index: 999; background-color: #eee"></div>
   <div id ="spinner" style="position:fixed; left: 20%; top:10%; z-index: 1000; width: 60px; height: 60px; margin: 0px; animation: rotate 1.4s infinite ease-in-out, background 1.4s infinite ease-in-out alternate;"></div>
-  
+
   <!-- centerJs -->
   <script>
     var w=window.innerWidth || document.documentElement.clientWidth || document.body.clientWidth;
@@ -64,7 +64,7 @@
 	  <div id="h1Set" class="h1">设置</div>
 	  <div id="h1About" class="h1">关于</div>
 	  <div id="h1Help" class="h1">帮助</div>
-    <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>    
+    <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>
 	<ul id="moreList">
       <li>
         <div id="settingLi">设置</div>
@@ -77,11 +77,11 @@
       </li>
     </ul>
     <div class="blank" id="blank">
-      <!-- extra layer --> 
+      <!-- extra layer -->
     </div>
   </div>
   <div class="top-bg"></div>
-  
+
   <!-- home content -->
   <div class="home">
     <!-- LP Calc -->
@@ -297,82 +297,82 @@
           <p class="p1 nop2">夜间模式</p>
           <div id="nightMode" class=""></div>
           <div class="onoffswitch">
-            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">        
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch">
             <label class="onoffswitch-label" for="myonoffswitch"></label>
           </div>
         </div>
         </div>
-	  
+
       <div id="themeColorLi">
-        <img src="images/color-ic.png" class="ic"/>  
+        <img src="images/color-ic.png" class="ic"/>
         <div>
           <p class="p1">主色调</p>
-          <br/>  
+          <br/>
           <div class="p2">主题主色调，默认为#1565c0</div>
           <div id="themeColor" class="colorSelect"><input id="themeColorInput" value="#1565C0"/></div>
         </div>
       </div>
 
       <div id="secondColorLi">
-        <img src="images/color-ic.png" class="ic" style="opacity:0.4;filter:alpha(opacity=40)"/>  
+        <img src="images/color-ic.png" class="ic" style="opacity:0.4;filter:alpha(opacity=40)"/>
         <div>
           <p class="p1">强调色</p>
-          <br/>  
+          <br/>
           <div class="p2">主题强调色，默认为#f08b3b</div>
           <div id="secondColor" class="colorSelect"><input id="secondColorInput" value="#f08b3b"/></div>
 		</div>
       </div>
-	
+
 	  <div id="">
-        <img src="images/opacity-ic.png" class="settingIc ic"/>  
+        <img src="images/opacity-ic.png" class="settingIc ic"/>
         <div>
           <p class="">图片透明度</p>
-          <br/>  
-          <div class="p2">仅用于把玩∠( ᐛ 」∠)＿</div>
+          <br/>
+          <div class="p2">仅用于把玩</div>
 		        <div id="opacitySet" class="colorSelect"><input id="opacityInput" value="1" type="number"/></div>
         </div>
       </div>
-	  
-	  <div id="">
-        <img src="images/settings-ic.png" class="settingIc ic"/> 
+
+	  <!-- <div id="">
+        <img src="images/settings-ic.png" class="settingIc ic"/>
         <div>
           <p class="nop2">###</p>
-          <br/>  
+          <br/>
           <div class="p2"></div>
         </div>
-      </div>
-	  
+      </div> -->
     </div>
-	
+
     <div class="set" id="set2">
       <h2 class="settingTittle">高级</h2>
+
       <div id="clearDate">
         <img src="images/restore-ic.png" class="settingIc ic"/>
         <div>
           <p class="">还原</p>
-          <br/>  
+          <br/>
           <div class="p2">清除所有用户数据(localStorage)</div>
         </div>
       </div>
 
-      <div id="">
-        <img src="images/settings-ic.png" class="settingIc ic"/> 
+      <div id="donate">
+        <img src="images/credit-card-ic.png" class="settingIc ic"/>
         <div>
-          <p class="nop2">###</p>
-          <br/>  
-          <div class="p2"></div>
+          <p class="">捐赠开发者</p>
+          <br/>
+          <div class="p2">求支持∠( ᐛ 」∠)＿</div>
         </div>
       </div>
-	  
-	  <div id="">
-        <img src="images/settings-ic.png" class="settingIc ic"/>  
+
+	  <!-- <div id="">
+        <img src="images/settings-ic.png" class="settingIc ic"/>
         <div>
-          <p class="nop2">###</p>
-          <br/>  
+          <p class="nop2">开发中</p>
+          <br/>
           <div class="p2"></div>
         </div>
-      </div>
-	  
+      </div> -->
+
     </div>
   </div>
 
