--- a/index.html
+++ b/index.html
@@ -61,11 +61,14 @@
   <div class="top">
     <img src="images/back-ic.png" id="back" alt="返回"/>
     <h1>特斯拉线圈设计器</h1>
-	  <div id="h1Set" class="h1">设置</div>
-	  <div id="h1About" class="h1">关于</div>
-	  <div id="h1Help" class="h1">帮助</div>
+    <div id="h1Set" class="h1">设置</div>
+    <div id="h1About" class="h1">关于</div>
+    <div id="h1Help" class="h1">帮助</div>
     <img src="images/more-vert-ic.png" id="moreIc" alt="选项"/>
-	<ul id="moreList">
+    <ul id="moreList">
+      <!-- <li>
+        <div id="settingReload">刷新</div>
+      </li> -->
       <li>
         <div id="settingLi">设置</div>
       </li>
@@ -77,8 +80,7 @@
       </li>
     </ul>
     <div class="blank" id="blank">
-      <!-- extra layer -->
-    </div>
+      <!-- extra layer --> </div>
   </div>
   <div class="top-bg"></div>
 
@@ -274,14 +276,139 @@
       </form>
     </div>
 
+    <!-- LL Calc -->
+    <div class="card LL">
+      <img id="llImg" src="images/LL.png" alt="电容组和变压器匹配" title="电容组和变压器匹配" />
+      <img class="img-title" src="images/LL-tittle.png"/>
+      <form method="get" name="capmatchcalc">
+      <!--[if IE 8]><div class="ie8"></div><![endif]-->
+        <legend>电容组与变压器匹配:</legend>
+        <img class="show-ic" src="images/show-ic.png"/>
+        <div class="toggle">
+          <!-- radio -->
+          <!--[if IE 8]><div class="ie8-small"></div><![endif]-->
+          <div class="label">电源频率（FL）:</div>
+          <label class="radio">
+            <input type="radio" name="radios" name="units" value="50" checked/>
+            <span class="outer">
+              <span class="inner"></span>
+            </span>
+            50HZ
+          </label>
+          <label class="radio">
+            <input type="radio" name="radios" name="units" value="60" />
+            <span class="outer">
+              <span class="inner"></span>
+            </span>
+            60HZ
+          </label>
+          <hr/>
+          <!-- E -->
+          <label>电压 (E) :</label>
+          <br/>
+          <input type="number" value="10000" />
+          <span class="form-span">V</span>
+          <br/>
+          <!-- I -->
+          <label>电流(I) :</label>
+          <br/>
+          <input type="number" value="100" />
+          <span class="form-span">mA</span>
+          <hr/>
+          <!-- C -->
+          <label>C =:</label>
+          <input disabled type="number" class="disabled" value="0.0318"/>
+          <span class="form-span">uF</span>
+        </div>
+      </form>
+    </div>
+
     <!-- data sheet -->
     <div class="card FO">
       <img src="images/ufo.jpg" alt="数据表" title="数据表"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
-        <legend>相关数据表</legend>
+        <legend>漆包线数据表</legend>
         <img class="show-ic" src="images/show-ic.png"/>
-        <div class="toggle"></div>
+        <div class="toggle">
+          <table id="tab1">
+          <!-- <caption>漆包线数据表</caption> -->
+
+            <tr>
+              <th id="th1"> 铜线直径 (mm)</th>
+              <th id="th2">AWG</th>
+              <th id="th3"> 每米的重量 (g)</th>
+              <th id="th4">每米的电阻(ohms)</th>
+            </tr>
+            <tr>
+              <td>0.32</td>
+              <td>28</td>
+              <td>0.72</td>
+              <td>0.218</td>
+            </tr>
+            <tr>
+              <td>0.36</td>
+              <td>27</td>
+              <td>0.86</td>
+              <td>0.182</td>
+            </tr>
+            <tr>
+              <td>0.40</td>
+              <td>26</td>
+              <td>1.12</td>
+              <td>0.140</td>
+            </tr>
+            <tr>
+              <td>0.45</td>
+              <td>25</td>
+              <td>1.42</td>
+              <td>0.112</td>
+            </tr>
+            <tr>
+              <td>0.51</td>
+              <td>24</td>
+              <td>1.75</td>
+              <td>0.089</td>
+            </tr>
+            <tr>
+              <td>0.57</td>
+              <td>23</td>
+              <td>2.11</td>
+              <td>0.074</td>
+            </tr>
+            <tr>
+              <td>0.64</td>
+              <td>22</td>
+              <td>2.96</td>
+              <td>0.053</td>
+            </tr>
+            <tr>
+              <td>0.72</td>
+              <td>21</td>
+              <td>3.44</td>
+              <td>0.046</td>
+            </tr>
+            <tr>
+              <td>0.81</td>
+              <td>20</td>
+              <td>4.49</td>
+              <td>0.035</td>
+            </tr>
+            <tr>
+              <td>0.91</td>
+              <td>19</td>
+              <td>5.68</td>
+              <td>0.028</td>
+            </tr>
+            <tr>
+              <td>1.02</td>
+              <td>18</td>
+              <td>6.99</td>
+              <td>0.023</td>
+            </tr>
+
+          </table>
+        </div>
       </form>
     </div>
   </div>
