--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <!-- js -->
   <script src="js/jquery.js" defer></script>
   <script src="js/my.js" defer></script>
-  <script src="js/pic.js" defer></script>
   <!-- Icon -->
   <link rel="icon" type="image/x-icon" href="images/Icon.png"/>
   <!-- tittle -->
@@ -88,7 +87,7 @@
   <div class="home">
     <!-- LP Calc -->
     <div class="card LP">
-      <img src="images/LP~.jpg" data-src="images/LP.jpg" class="lazyload" alt="电弧长度" title="电弧长度" />
+      <img src="images/LP~.jpg" alt="电弧长度" title="电弧长度" />
       <img class="img-title" src="images/LP-title.gif"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
@@ -278,11 +277,11 @@
 
     <!-- LL Calc -->
     <div class="card LL">
-      <img id="llImg" src="images/LL.png" alt="电容组和变压器匹配" title="电容组和变压器匹配" />
-      <img class="img-title" src="images/LL-tittle.png"/>
-      <form method="get" name="capmatchcalc">
+      <img id="llImg" src="images/LL.png" alt="螺线管电感" title="螺线管电感" />
+      <img class="img-title" src="images/LL-tittle-min.png"/>
+      <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
-        <legend>电容组与变压器匹配:</legend>
+        <legend>螺线管线圈:</legend>
         <img class="show-ic" src="images/show-ic.png"/>
         <div class="toggle">
           <!-- radio -->
@@ -325,7 +324,7 @@
 
     <!-- data sheet -->
     <div class="card FO">
-      <img src="images/ufo.jpg" alt="数据表" title="数据表"/>
+      <img src="images/extension-ic-min.png" alt="数据表" title="数据表"/>
       <form method="get">
       <!--[if IE 8]><div class="ie8"></div><![endif]-->
         <legend>漆包线数据表</legend>
