add cardTime setting

--- a/index.html
+++ b/index.html
@@ -503,6 +503,19 @@
     <div class="set" id="set2">
       <h2 class="settingTittle">高级</h2>
 
+      <div id="cardTime">
+        <img src="images/timelapse-ic.png" class="settingIc ic"/>
+        <div>
+          <p class="">卡片动画</p>
+          <br/>
+          <div class="p2">强制开启卡片伸缩动画</div>
+          <div class="onoffswitch2">
+            <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox2" id="myonoffswitch2">
+            <label class="onoffswitch-label2" for="myonoffswitch2"></label>
+          </div>
+        </div>
+      </div>
+
       <div id="clearDate">
         <img src="images/restore-ic.png" class="settingIc ic"/>
         <div>
