--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         <div>
           <p class="">图片透明度</p>
           <br/>
-          <div class="p2">仅用于把玩</div>
+          <div class="p2">仅供测试</div>
 		        <div id="opacitySet" class="colorSelect"><input id="opacityInput" value="1" type="number"/></div>
         </div>
       </div>
